# Summit-Sweeper

./: .gitignore
firmware/: .clang-format
firmware/distance_sensors/: CommandInterface.cpp  Commands.cpp  Commands.h  IRsensor.cpp  IRsensor.h  ProjectDef.h  distance_sensors.ino  ultrasonic.cpp  ultrasonic.h  utils.h
firmware/horizontal_movement/: CommandInterface.cpp  CommandInterface.h  Commands.cpp  Commands.h  ProjectDef.h  horizontal_movement.ino  motors.cpp  motors.h  utils.cpp  utils.h
keyboard_control/: CMakeLists.txt  package.xml
keyboard_control/scripts/: py_keyboard_control.py
keyboard_control/src/: keyboard_control.cpp
startup/: CMakeLists.txt  keyboard.launch  package.xml  summit_sweeper.launch  test_horizontal.launch  test_step.launch
startup/prerun-scripts/: launch.sh  map-arduinos.py
summit_climber_DC_motor_control/: CMakeLists.txt  package.xml
summit_climber_dc_motor_control/: CMakeLists.txt  package.xml
summit_climber_dc_motor_control/src/: motor_controller.py
summit_climber_distance_sensors/: CMakeLists.txt  package.xml
summit_climber_distance_sensors/src/: distance_pub.py
summit_climber_stepper_control/: CMakeLists.txt  Serial.cpp  Serial.hpp  package.xml  tic_stepper_controller.cpp  tic_stepper_controller.hpp
summit_climber_vacuum_controller/: CMakeLists.txt  package.xml
summit_climber_vacuum_controller/src/: set_vacuum_enable.py
summit_sweeper_horizontal_movement/: CMakeLists.txt  package.xml
summit_sweeper_horizontal_movement/scripts/: motor_control_sub.py
summit_sweeper_run/: CMakeLists.txt  package.xml
summit_sweeper_run/scripts/: horizontal_speed.py  summit_sweeper.py  test_horizontal.py  test_step.py
summit_sweeper_sensors/: CMakeLists.txt  package.xml
summit_sweeper_sensors/scripts/: distance_pub.py  distance_sub.py
summit_sweeper_stepper_control/: CMakeLists.txt  package.xml
summit_sweeper_stepper_control/include/: tic_stepper_controller.hpp
summit_sweeper_stepper_control/include/summit_sweeper_stepper_control/: tic_stepper_controller.hpp
summit_sweeper_stepper_control/scripts/: .ticController.py.swp  vertical_control.py
summit_sweeper_stepper_control/src/: Serial.cpp  Serial.hpp  tic_stepper_controller.cpp  vertical_control.cpp
summit_sweeper_vacuum_control/: CMakeLists.txt  package.xml
summit_sweeper_vacuum_control/scripts/: vacuum_control_sub.py
